<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.SettingActivity"
    android:fitsSystemWindows="true"
    >
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/tool_save"
        android:background="@color/colorGray"
        app:title="@string/app_name"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tool_save">

        <!--Top-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--begin date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/beginDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginDate"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:inputType="datetime"
                    android:textAlignment="center" />

            </LinearLayout>

            <!--sort-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp">

                </Spinner>


            </LinearLayout>

            <!--new value-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/newVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newValue"
                    android:textSize="20sp" />

                <!--check box-->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/art"
                        android:text="@string/art" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fashion"
                        android:text="@string/fashion" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sport"
                        android:text="@string/sport" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!--Bottom-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:background="@color/colorAqua"
                android:text="@string/cancel"
                android:drawableEnd="@drawable/ic_action_cancel"
                android:layout_marginEnd="30sp"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"/>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAqua"
                android:drawableEnd="@drawable/ic_stat_save"
                android:text="@string/save"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>